--- a/en/writeups/santhacklausctf-2018/santhacklaus-ctf/index.html
+++ b/en/writeups/santhacklausctf-2018/santhacklaus-ctf/index.html
@@ -169,6 +169,9 @@ Le Santhacklaus CTF 2018 est un challenge Jeopardy en ligne, organisé par quatr
   </div>
 </div>
 
+<script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
+<noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
+
         <div class="content container">
             
     <article>
