--- a/en/writeups/santhacklausctf-2018/santhacklaus-ctf/index.html
+++ b/en/writeups/santhacklausctf-2018/santhacklaus-ctf/index.html
@@ -1362,5 +1362,7 @@ if (!doNotTrack) {
 
 
 
+    <script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
+    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
     </body>
 </html>
