--- a/en/writeups/santhacklausctf-2018/santhacklaus-ctf/index.html
+++ b/en/writeups/santhacklausctf-2018/santhacklaus-ctf/index.html
@@ -121,6 +121,9 @@ Le Santhacklaus CTF 2018 est un challenge Jeopardy en ligne, organisé par quatr
 			 
 		
 		</li>
+		<li>
+			<a href="https://cheatsheet.haax.fr" target="_blank">Cheasheet</a>
+		</li>
 	</ul>
 </div>
 
