--- a/en/writeups/santhacklausctf-2018/santhacklaus-ctf/index.html
+++ b/en/writeups/santhacklausctf-2018/santhacklaus-ctf/index.html
@@ -130,7 +130,7 @@ Le Santhacklaus CTF 2018 est un challenge Jeopardy en ligne, organisé par quatr
     <p>
       <section class="social">
 	
-	<a href="https://twitter.com/Haaxmax" target="blank"><i class="fab fa-twitter fa-lg" aria-hidden="true"></i></a>
+	<a href="https://twitter.com/Haax9_" target="blank"><i class="fab fa-twitter fa-lg" aria-hidden="true"></i></a>
 	
 	
 	&nbsp;<a href="https://github.com/Haax9" target="blank"><i class="fab fa-github fa-lg" aria-hidden="true"></i></a>
