--- a/en/writeups/santhacklausctf-2018/santhacklaus-ctf/index.html
+++ b/en/writeups/santhacklausctf-2018/santhacklaus-ctf/index.html
@@ -163,7 +163,7 @@ Le Santhacklaus CTF 2018 est un challenge Jeopardy en ligne, organisé par quatr
 	
 	
 	
-	&nbsp;<a href="https://haaxmax.github.io/en/index.xml" target="blank"><i class="fas fa-rss fa-lg" aria-hidden="true"></i></a>
+	&nbsp;<a href="https://haax.fr/en/index.xml" target="blank"><i class="fas fa-rss fa-lg" aria-hidden="true"></i></a>
 	</section>
 
     </p>
